// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Simple Components/Button Controlled With Knobs 1`] = `
.c0 {
  font-size: 2rem;
}

<button
  className="c0"
  size="default"
>
  This is a button
</button>
`;

exports[`Storyshots Simple Components/Button Default 1`] = `
.c0 {
  font-size: 2rem;
}

<button
  className="c0"
  size="default"
>
  This is a button
</button>
`;

exports[`Storyshots Simple Components/Button Extra Large 1`] = `
.c0 {
  font-size: 4rem;
}

<button
  className="c0"
  size="xlarge"
>
  This is a button
</button>
`;

exports[`Storyshots Simple Components/Button Large 1`] = `
.c0 {
  font-size: 3rem;
}

<button
  className="c0"
  size="large"
>
  This is a button
</button>
`;

exports[`Storyshots Simple Components/Button Small 1`] = `
.c0 {
  font-size: 1rem;
}

<button
  className="c0"
  size="small"
>
  This is a button
</button>
`;
